--- a/trunk/VietRestaurant2.0/VietRestaurant2.0.csproj
+++ b/trunk/VietRestaurant2.0/VietRestaurant2.0.csproj
@@ -487,6 +487,15 @@
   <ItemGroup>
     <None Include="Resources\arrow_right_48.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\beer_48.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\wpdda6632f_06.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\001_43.gif" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
