--- a/trunk/VietRestaurant2.0/VietRestaurant2.0.csproj
+++ b/trunk/VietRestaurant2.0/VietRestaurant2.0.csproj
@@ -166,6 +166,12 @@
     <Compile Include="BanHang\XoaKhuVuc.Designer.cs">
       <DependentUpon>XoaKhuVuc.cs</DependentUpon>
     </Compile>
+    <Compile Include="CaiDat\CaiDat.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CaiDat\CaiDat.Designer.cs">
+      <DependentUpon>CaiDat.cs</DependentUpon>
+    </Compile>
     <Compile Include="CrystalReportThongKeDoanhThuTheoThang.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -417,6 +423,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="BanHang\XoaKhuVuc.resx">
       <DependentUpon>XoaKhuVuc.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CaiDat\CaiDat.resx">
+      <DependentUpon>CaiDat.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CrystalReportThongKeDoanhThuTheoThang.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
